--- a/NOVA/Views/Satis/MusteriRaporu.cshtml
+++ b/NOVA/Views/Satis/MusteriRaporu.cshtml
@@ -86,152 +86,157 @@
     }
 </style>
 
-<body style="background-color:white; overflow-y: hidden;">
+<body style="background-color:white;">
 
+    <div class="container-fluid">
 
+        <div class="btn-group menu1">
+            <button type="button" class="btn btn-primary btn-icon rounded-pill dropdown-toggle hide-arrow" data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="bx bx-dots-vertical-rounded"></i>
+            </button>
+            <ul class="dropdown-menu dropdown-menu-end" style="">
+                <li><a class="dropdown-item" onclick="change(1)">Tüm Müşteriler</a></li>
+                <li>
+                    <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" onclick="change(2)">Planlanan</a></li>
+                <li>
+                    <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" onclick="change(3)">Gerçekleşen</a></li>
+                <li>
+                    <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" onclick="change(4)">Ürünler</a></li>
+            </ul>
+        </div>
 
-    <div class="btn-group menu1">
-        <button type="button" class="btn btn-primary btn-icon rounded-pill dropdown-toggle hide-arrow" data-bs-toggle="dropdown" aria-expanded="false">
-            <i class="bx bx-dots-vertical-rounded"></i>
-        </button>
-        <ul class="dropdown-menu dropdown-menu-end" style="">
-            <li><a class="dropdown-item" onclick="change(1)">Tüm Müşteriler</a></li>
-            <li>
-                <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" onclick="change(2)">Planlanan</a></li>
-            <li>
-                <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" onclick="change(3)">Gerçekleşen</a></li>
-            <li>
-                <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" onclick="change(4)">Ürünler</a></li>
-        </ul>
-    </div>
-
-    <div class="btn-group menu2" role="group" aria-label="Basic radio toggle button group">
-        <input type="radio" class="btn-check" onclick="change(1)" name="btnradio" id="btnradio1" checked="" autocomplete="off">
-        <label class="btn btn-outline-primary" for="btnradio1">Tüm Müşteriler</label>
-        <input type="radio" class="btn-check" onclick="change(2)" name="btnradio" id="btnradio2" autocomplete="off">
-        <label class="btn btn-outline-primary" for="btnradio2">Planlanan</label>
-        <input type="radio" class="btn-check" onclick="change(3)" name="btnradio" id="btnradio3" autocomplete="off">
-        <label class="btn btn-outline-primary" for="btnradio3">Gerçekleşen</label>
-        <input type="radio" class="btn-check" onclick="change(4)" name="btnradio" id="btnradio4" autocomplete="off">
-        <label class="btn btn-outline-primary" for="btnradio4">Ürünler</label>
-    </div>
-
-
-
-
-    <div id="employeeTableWrapper" class="tableWrapper table-responsive">
-        <table id="table"
-               class="table table-striped"
-               data-pagination="true"
-               data-search="true"
-               data-show-columns="true"
-               data-show-columns-toggle-all="true"
-               data-locale="tr-TR"
-               data-mobile-responsive="true">
-            <thead>
-                <tr>
-                    <th data-field="MUSTERI_ADI" data-sortable="true">Müşteri Adı</th>
-                    <th data-field="MUSTERI_ADRES" data-sortable="true" data-formatter="adresFormatter">Müşteri Adres</th>
-                    <th data-field="MUSTERI_TEL1" data-sortable="true" data-formatter="telFormatter">Müşteri Telefon</th>
-                    <th data-field="MUSTERI_MAIL" data-sortable="true">Müşteri Mail</th>
-                    <th data-field="MUSTERI_SEKTOR" data-sortable="true">Müşteri Sektör</th>
-                    <th data-field="MUSTERI_NITELIK" data-sortable="true">Müşteri Nitelik</th>
-                    <th data-field="MUSTERI_NOTU" data-sortable="true">Müşteri Notu</th>
-                    <th data-field="PLASIYER" data-sortable="true">Plasiyer</th>
-                    <th data-field="KAYIT_TARIHI" data-sortable="true" data-formatter="teslimFormatter">Kayıt Tarihi</th>
-                </tr>
-            </thead>
-        </table>
-
-
-    </div>
+        <div class="btn-group menu2" role="group" aria-label="Basic radio toggle button group">
+            <input type="radio" class="btn-check" onclick="change(1)" name="btnradio" id="btnradio1" checked="" autocomplete="off">
+            <label class="btn btn-outline-primary" for="btnradio1">Tüm Müşteriler</label>
+            <input type="radio" class="btn-check" onclick="change(2)" name="btnradio" id="btnradio2" autocomplete="off">
+            <label class="btn btn-outline-primary" for="btnradio2">Planlanan</label>
+            <input type="radio" class="btn-check" onclick="change(3)" name="btnradio" id="btnradio3" autocomplete="off">
+            <label class="btn btn-outline-primary" for="btnradio3">Gerçekleşen</label>
+            <input type="radio" class="btn-check" onclick="change(4)" name="btnradio" id="btnradio4" autocomplete="off">
+            <label class="btn btn-outline-primary" for="btnradio4">Ürünler</label>
+        </div>
 
 
 
 
+        <div id="employeeTableWrapper" class="tableWrapper table-responsive">
+            <table id="table"
+                   class="table table-striped"
+                   data-pagination="true"
+                   data-search="true"
+                   data-show-columns="true"
+                   data-show-columns-toggle-all="true"
+                   data-locale="tr-TR"
+                   data-mobile-responsive="true"
+                   data-page-size="5">
+                <thead>
+                    <tr>
+                        <th data-field="MUSTERI_ADI" data-sortable="true">Müşteri Adı</th>
+                        <th data-field="MUSTERI_ADRES" data-sortable="true" data-formatter="adresFormatter">Müşteri Adres</th>
+                        <th data-field="MUSTERI_TEL1" data-sortable="true" data-formatter="telFormatter">Müşteri Telefon</th>
+                        <th data-field="MUSTERI_MAIL" data-sortable="true">Müşteri Mail</th>
+                        <th data-field="MUSTERI_SEKTOR" data-sortable="true">Müşteri Sektör</th>
+                        <th data-field="MUSTERI_NITELIK" data-sortable="true">Müşteri Nitelik</th>
+                        <th data-field="MUSTERI_NOTU" data-sortable="true">Müşteri Notu</th>
+                        <th data-field="PLASIYER" data-sortable="true">Plasiyer</th>
+                        <th data-field="KAYIT_TARIHI" data-sortable="true" data-formatter="teslimFormatter">Kayıt Tarihi</th>
+                    </tr>
+                </thead>
+            </table>
 
 
-    <div id="employeeTableWrapper1" class="tableWrapper table-responsive">
-
-        <table id="table2"
-               class="table table-striped"
-               data-pagination="true"
-               data-search="true"
-               data-show-columns="true"
-               data-show-columns-toggle-all="true"
-               data-locale="tr-TR"
-               data-mobile-responsive="true">
-            <thead>
-                <tr>
-                    <th data-field="MUSTERI_ID" data-sortable="true" data-formatter="musteriadiFormatter">Müşteri Adı</th>
-                    <th data-field="PLANLANAN_TARIH" data-sortable="true" data-formatter="planlananFormatter">Planlanan Tarih</th>
-
-                </tr>
-            </thead>
-        </table>
-
-    </div>
+        </div>
 
 
 
 
 
 
-    <div id="employeeTableWrapper2" class="tableWrapper table-responsive">
-        <table id="table3"
-               class="table table-striped"
-               data-pagination="true"
-               data-search="true"
-               data-show-columns="true"
-               data-show-columns-toggle-all="true"
-               data-locale="tr-TR"
-               data-mobile-responsive="true">
-            <thead>
-                <tr>
-                    <th data-field="MUSTERI_ID" data-sortable="true" data-formatter="musteriadiFormatter">Müşteri Adı</th>
-                    <th data-field="PLANLANAN_TARIH" data-sortable="true" data-formatter="planlananFormatter">Planlanan Tarih</th>
-                    <th data-field="GERCEKLESEN_TARIH" data-sortable="true" data-formatter="gerceklesenFormatter">Gerçekleşen Tarih</th>
-                </tr>
-            </thead>
-        </table>
+        <div id="employeeTableWrapper1" class="tableWrapper table-responsive">
+
+            <table id="table2"
+                   class="table table-striped"
+                   data-pagination="true"
+                   data-search="true"
+                   data-show-columns="true"
+                   data-show-columns-toggle-all="true"
+                   data-locale="tr-TR"
+                   data-mobile-responsive="true"
+                   data-page-size="5">
+                <thead>
+                    <tr>
+                        <th data-field="MUSTERI_ID" data-sortable="true" data-formatter="musteriadiFormatter">Müşteri Adı</th>
+                        <th data-field="PLANLANAN_TARIH" data-sortable="true" data-formatter="planlananFormatter">Planlanan Tarih</th>
+                        <th data-field="RANDEVU_NOTU" data-sortable="true" data-formatter="notFormatter">Ziyaret Notu</th>
+
+                    </tr>
+                </thead>
+            </table>
+
+        </div>
 
 
-    </div>
-
-    <div id="employeeTableWrapper3" class="tableWrapper table-responsive">
-        <table id="table4"
-               class="table table-striped"
-               data-pagination="true"
-               data-buttons-order="['paginationSwitch', 'columns', 'filterTable']"
-               data-search="true"
-               data-show-columns="true"
-               data-export-data-type="all"
-               data-export-types="['excel']"
-               data-show-export="true"
-               data-locale="tr-TR"
-               data-mobile-responsive="true">
-            <thead>
-                <tr>
-                    <th data-field="MUSTERI_ID" data-sortable="true" data-formatter="musteriadiFormatter">Müşteri Adı</th>
-                    <th data-field="URUN_GRUBU" data-sortable="true">Ürün Grubu</th>
-                    <th data-field="YILLIK_KULLANIM" data-sortable="true">Yıllık Kullanım</th>
-                    <th data-field="OLCU_BIRIMI" data-sortable="true">Ölçü Birimi</th>
-                    <th data-field="KAYIT_YAPAN_KULLANICI" data-formatter="plasiyerFormatter1">PLASIYER</th>
-                </tr>
-            </thead>
-        </table>
 
 
-    </div>
 
 
-    <script>
+        <div id="employeeTableWrapper2" class="tableWrapper table-responsive">
+            <table id="table3"
+                   class="table table-striped"
+                   data-pagination="true"
+                   data-search="true"
+                   data-show-columns="true"
+                   data-show-columns-toggle-all="true"
+                   data-locale="tr-TR"
+                   data-mobile-responsive="true"
+                   data-page-size="5">
+                <thead>
+                    <tr>
+                        <th data-field="MUSTERI_ID" data-sortable="true" data-formatter="musteriadiFormatter">Müşteri Adı</th>
+                        <th data-field="PLANLANAN_TARIH" data-sortable="true" data-formatter="planlananFormatter">Planlanan Tarih</th>
+                        <th data-field="GERCEKLESEN_TARIH" data-sortable="true" data-formatter="gerceklesenFormatter">Gerçekleşen Tarih</th>
+                        <th data-field="RANDEVU_NOTU" data-sortable="true" data-formatter="notFormatter">Ziyaret Notu</th>
+                    </tr>
+                </thead>
+            </table>
+
+
+        </div>
+
+        <div id="employeeTableWrapper3" class="tableWrapper table-responsive">
+            <table id="table4"
+                   class="table table-striped"
+                   data-pagination="true"
+                   data-buttons-order="['paginationSwitch', 'columns', 'filterTable']"
+                   data-search="true"
+                   data-show-columns="true"
+                   data-export-data-type="all"
+                   data-export-types="['excel']"
+                   data-show-export="true"
+                   data-locale="tr-TR"
+                   data-mobile-responsive="true">
+                <thead>
+                    <tr>
+                        <th data-field="MUSTERI_ID" data-sortable="true" data-formatter="musteriadiFormatter">Müşteri Adı</th>
+                        <th data-field="URUN_GRUBU" data-sortable="true">Ürün Grubu</th>
+                        <th data-field="YILLIK_KULLANIM" data-sortable="true">Yıllık Kullanım</th>
+                        <th data-field="OLCU_BIRIMI" data-sortable="true">Ölçü Birimi</th>
+                        <th data-field="KAYIT_YAPAN_KULLANICI" data-formatter="plasiyerFormatter1">PLASIYER</th>
+                    </tr>
+                </thead>
+            </table>
+
+
+        </div>
+
+
+        <script>
         var r = null;
         var r2 = null;
         var username = null;
@@ -269,13 +274,14 @@
                     } else if (value == 2) {
                         $('#employeeTableWrapper').hide();
                         $('#employeeTableWrapper1').show();
+                        
+                        $('#employeeTableWrapper2').hide();
+                        $('#employeeTableWrapper3').hide();
                         getRandevuAsync().then(function (data) {
                             var randevular = JSON.parse(data).filter(x => x.GERCEKLESEN_TARIH == null);
 
                             $('#table2').bootstrapTable({ data: randevular });
                         })
-                        $('#employeeTableWrapper2').hide();
-                        $('#employeeTableWrapper3').hide();
                     } else if (value == 3) {
                         $('#employeeTableWrapper').hide();
                         $('#employeeTableWrapper1').hide();
@@ -291,7 +297,7 @@
                             $(function () {
 
 
-                                sor2 = JSON.parse(result).filter(x => x.GERCEKLESEN_TARIH != null);
+                                sor2 = JSON.parse(result).filter(x => x.GERCEKLESEN_TARIH != null&&x.KAYIT_YAPAN_KULLANICI_ID==@Html.Raw(Json.Encode(Request.Cookies["Id"].Value)));
                                 $('#table3').bootstrapTable({ data: sor2 })
 
                             })
@@ -342,7 +348,13 @@
                     })
                 })
                 })
+        function notFormatter(value, row, index) {
 
+            if (value == null) {
+                value = "";
+            }
+            return "<textarea cols='17' disabled>" + value + "</textarea>";
+        }
         function plasiyerFormatter1(value, row, index) {
             if (value == null) {
                 return "";
@@ -368,15 +380,28 @@
                 return row.MUSTERI_IL + ", " + row.MUSTERI_ILCE + ", " + row.MUSTERI_MAHALLE + ", " + value;
             }
             function telFormatter(value, row, index) {
-
-                return value+", "+row.MUSTERI_TEL2;
+                var tel1 = value;
+                var tel2 = row.MUSTERI_TEL2;
+                var sum = "";
+                if (tel1 != null && tel2 != null) {
+                    sum = tel1 + ", " + tel2;
+                } else if (tel1 == null && tel2 != null) {
+                    sum = tel2;
+                } else if (tel1 != null && tel2 == null) {
+                    sum = tel1;
+                }
+                if (sum == "") {
+                    sum = "-";
+                }
+                return sum;
             }
             function planlananFormatter(value, row, index) {
                 var old = value.split('T')[0];
                 var year = old.split('-')[0];
                 var month = old.split('-')[1];
                 var day = old.split('-')[2];
-                var newdate = day + "/" + month + "/" + year;
+                var saat = value.split('T')[1].substring(0, 5);
+                var newdate = day + "/" + month + "/" + year + " " + saat;
                 return newdate;
             }
             function gerceklesenFormatter(value, row, index) {
@@ -384,14 +409,16 @@
                 var year = old.split('-')[0];
                 var month = old.split('-')[1];
                 var day = old.split('-')[2];
-                var newdate = day + "/" + month + "/" + year;
+                var saat = value.split('T')[1].substring(0, 5);
+                var newdate = day + "/" + month + "/" + year + " " + saat;
                 return newdate;
             }
             function musteriadiFormatter(value, row, index) {
 
                 return JSON.parse(r).filter(x => x.MUSTERI_ID == value)[0].MUSTERI_ADI;
             }
-    </script>
+        </script>
+        </div>
 </body>
 
 
