--- a/NOVA/Views/Shared/_Layout_ZiyaretPlanlari.cshtml
+++ b/NOVA/Views/Shared/_Layout_ZiyaretPlanlari.cshtml
@@ -11,6 +11,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/assets/img/icons/brands/Nova_White.png" />
     <script src="~/Scripts/jquery-3.6.1.min.js"></script>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -43,39 +45,44 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/i18n/tr.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="~/Scripts/tippy/popper.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
     <style>
 
-        
+
 
         .accordion-button {
             margin: 0;
             background-color: #D0E0E3;
         }
+
         .fc-button {
             background-color: #48483E !important;
             background-image: none;
-            
         }
+
             .fc-button:hover {
-                background:#6d6d65 !important;
+                background: #6d6d65 !important;
             }
-            .accordion-button:not(.collapsed) {
-                color: #566a7f;
-                background-color: #D0E0E3;
-                box-shadow: inset 0 0 0 #d9dee3;
-            }
+
+        .accordion-button:not(.collapsed) {
+            color: #566a7f;
+            background-color: #D0E0E3;
+            box-shadow: inset 0 0 0 #d9dee3;
+        }
 
         .fc-license-message {
             display: none;
         }
 
-       
-     
+
+
 
         span.deleteicon input {
             padding-right: 18px;
             box-sizing: border-box;
         }
+
         #external-events .fc-event .fc-event-main {
             position: relative;
             z-index: 2;
@@ -83,6 +90,7 @@
             background-color: #697FC2;
             border-radius: 0.375rem;
         }
+
         #external-events1 .fc-event .fc-event-main {
             position: relative;
             z-index: 2;
@@ -90,9 +98,11 @@
             background-color: #697FC2;
             border-radius: 0.375rem;
         }
-        .fc-v-event{
-            border:hidden;
+
+        .fc-v-event {
+            border: hidden;
         }
+
         #external-events .fc-event {
             cursor: move;
             margin: 3px 0;
@@ -103,7 +113,9 @@
             margin: 3px 0;
         }
 
-        
+        .fc-event-bg-color {
+            background-color: transparent;
+        }
 
         .fc-event-main {
             padding: 0 5px;
@@ -149,6 +161,7 @@
         .fc-theme-standard {
             border-color: red !important;
         }
+
         @@media screen and (max-width: 600px) {
             .fc-button-group {
                 margin-bottom: 5px;
@@ -217,86 +230,89 @@
                     border-bottom: 0;
                 }
         }
-            @@media screen and (min-width: 600px) and (max-width:1850px) {
-                .fc-button-group {
-                    margin-bottom: 5px;
-                }
 
-                #external-events1 {
-                    position: relative;
-                    z-index: 2;
-                    top: 1px;
-                    left: 50px;
-                    width: 250px;
-                    padding: 0;
-                    border-radius: 12.5px;
-                    margin-left: 25vw;
-                }
+        @@media screen and (min-width: 600px) and (max-width:1850px) {
+            .fc-button-group {
+                margin-bottom: 5px;
+            }
 
-                #menu1 {
-                    display: none;
-                }
+            #external-events1 {
+                position: relative;
+                z-index: 2;
+                top: 1px;
+                left: 50px;
+                width: 250px;
+                padding: 0;
+                border-radius: 12.5px;
+                margin-left: 25vw;
+            }
 
-                #menu2 {
-                    display: unset;
-                }
+            #menu1 {
+                display: none;
+            }
 
-                #example1 caption {
-                    font-size: 1.3em;
-                }
+            #menu2 {
+                display: unset;
+            }
 
-                #example1 thead {
-                    border: none;
-                    clip: rect(0 0 0 0);
-                    height: 1px;
-                    margin: -1px;
-                    overflow: hidden;
-                    padding: 0;
-                    position: absolute;
-                    width: 1px;
-                    display: none;
-                }
+            #example1 caption {
+                font-size: 1.3em;
+            }
 
-                #example1 tr {
-                    border-bottom: 3px solid #ddd;
-                    display: block;
-                    margin-bottom: .625em;
-                }
+            #example1 thead {
+                border: none;
+                clip: rect(0 0 0 0);
+                height: 1px;
+                margin: -1px;
+                overflow: hidden;
+                padding: 0;
+                position: absolute;
+                width: 1px;
+                display: none;
+            }
 
-                #example1 td {
-                    border-bottom: 1px solid #ddd;
-                    display: block;
-                    font-size: .8em;
-                    text-align: right;
-                }
+            #example1 tr {
+                border-bottom: 3px solid #ddd;
+                display: block;
+                margin-bottom: .625em;
+            }
 
-                    #example1 td::before {
-                        /*
+            #example1 td {
+                border-bottom: 1px solid #ddd;
+                display: block;
+                font-size: .8em;
+                text-align: right;
+            }
+
+                #example1 td::before {
+                    /*
         * aria-label has no advantage, it won't be read inside a table
         content: attr(aria-label);
         */
-                        content: attr(data-label);
-                        float: left;
-                        font-weight: bold;
-                        text-transform: uppercase;
-                    }
+                    content: attr(data-label);
+                    float: left;
+                    font-weight: bold;
+                    text-transform: uppercase;
+                }
 
-                    #example1 td:last-child {
-                        border-bottom: 0;
-                    }
-            }
+                #example1 td:last-child {
+                    border-bottom: 0;
+                }
+        }
     </style>
     <script>
 
         var calendar = null
         var drag = null;
+        var drag1 = null;
         var gerceklesentarih = null;
-       
+
         document.addEventListener('DOMContentLoaded', function () {
             var Calendar = FullCalendar.Calendar;
             var Draggable = FullCalendar.Draggable;
 
             var containerEl = document.getElementById('external-events');
+            var containerEl1 = document.getElementById('external-events1');
             var calendarEl = document.getElementById('calendar');
             var checkbox = document.getElementById('drop-remove');
 
@@ -304,6 +320,16 @@
             // -----------------------------------------------------------------
 
             drag=new Draggable(containerEl, {
+                itemSelector: '.fc-event',
+                eventData: function (eventEl) {
+                    var j_selector = jQuery(eventEl);
+                    return {
+                        id: j_selector.data('id'),
+                        title: eventEl.innerText
+                    };
+                }
+            });
+            drag1 = new Draggable(containerEl1, {
                 itemSelector: '.fc-event',
                 eventData: function (eventEl) {
                     var j_selector = jQuery(eventEl);
@@ -396,37 +422,39 @@
                         }).done(function () {
 
                             if (result.isConfirmed) {
-                            $.ajax({
-                                type: 'POST',
-                                url: '@Url.Action("RandevuEkleGuncelle", "Satis")',
-                                data: s,
-                                contentType: "application/json",
-                                success: function () {
-                                    const Toast = Swal.mixin({
-                                        toast: true,
-                                        position: 'center',
-                                        showConfirmButton: false,
-                                        timer: 1000,
-                                        didOpen: (toast) => {
-                                            toast.addEventListener('mouseenter', Swal.stopTimer)
-                                            toast.addEventListener('mouseleave', Swal.resumeTimer)
-                                        }
-                                    })
-                                    refreshtable();
-                                    Toast.fire({
-                                        icon: 'success',
-                                        title: 'Ziyaret başarıyla değiştirildi!'
-                                    });
-                                },
-                                error: function () {
+                                $.ajax({
+                                    type: 'POST',
+                                    url: '@Url.Action("RandevuEkleGuncelle", "Satis")',
+                                    data: s,
+                                    contentType: "application/json",
+                                    success: function () {
+                                        const Toast = Swal.mixin({
+                                            toast: true,
+                                            position: 'center',
+                                            showConfirmButton: false,
+                                            timer: 1000,
+                                            didOpen: (toast) => {
+                                                toast.addEventListener('mouseenter', Swal.stopTimer)
+                                                toast.addEventListener('mouseleave', Swal.resumeTimer)
+                                            }
+                                        })
+                                        refreshtable();
+                                        Toast.fire({
+                                            icon: 'success',
+                                            title: 'Ziyaret başarıyla değiştirildi!'
+                                        });
+                                    },
+                                    error: function () {
 
-                                },
-                                dataType: 'json'
-                            })
-                        } else if (result.isDenied) {
-                            date.revert();
-                            Swal.fire('Değişiklik kaydedilmedi', '', 'info')
-                        }
+                                    },
+                                    dataType: 'json'
+                                })
+                            } else if (result.isDenied) {
+                                date.revert();
+                                Swal.fire('Değişiklik kaydedilmedi', '', 'info')
+                            } else {
+                                date.revert();
+                            }
                         })
 
 
@@ -441,7 +469,11 @@
 
                             var d = JSON.parse(data).filter(x => x.INCKEY == info.event.extendedProps.inckey);
                             $('#datepickermodal').modal('show');
+                            $('#copycol').hide();
+
                             $('#planlanan').val(d[0].PLANLANAN_TARIH);
+                            $('#planlanan').prop("readonly", true);
+                            $('#planlanan').prop("disabled", true);
                             $('#inckey').val(d[0].INCKEY);
                             $('#musid').val(d[0].MUSTERI_ID);
                             $('#musadi').text(info.event.title);
@@ -455,13 +487,13 @@
                                 $('#gercekkolon').show();
                                 $('#gercekth').show();
                                 $('#complatebutton').hide();
-                                $('#planlanan').prop("readonly",true);
+
                                 $('#gerceklesen').val(d[0].GERCEKLESEN_TARIH);
                             } else {
+
                                 $('#gercekkolon').hide();
                                 $('#gercekth').hide();
                                 $('#complatebutton').show();
-                                $('#planlanan').prop("readonly", false);
                             }
                         })
 
@@ -479,6 +511,24 @@
                 },
                 dateClick: function (info) {
                     calendar.changeView('timeGridDay', info.dateStr);
+                },
+                eventDidMount: function (info) {
+                    if (info.event.extendedProps.description != null) {
+                        $(info.el).tooltip({
+                            title: info.event.extendedProps.description,
+                            placement: "top",
+                            trigger: "hover",
+                            container: "body"
+                        });
+                    } else {
+                        $(info.el).tooltip({
+                            title: "Not girilmemiş.",
+                            placement: "top",
+                            trigger: "hover",
+                            container: "body"
+                        });
+                    }
+                    
                 },
                 themeSystem: 'bootstrap5',
                 buttonText: {
@@ -849,7 +899,7 @@
 
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
-
+   
 
     <script type="text/javascript" src="/assets/vendor/js/menu.js"></script>
     <!-- endbuild -->
