--- a/NOVA/Views/Shared/_Layout.cshtml
+++ b/NOVA/Views/Shared/_Layout.cshtml
@@ -5,7 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9">
-
+    <title>Nova | Efece Galvaniz</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/assets/img/icons/brands/Nova_White.png" />
     <script src="~/Scripts/jquery-3.6.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -35,9 +37,18 @@
     <script type="text/javascript" src="\assets\js\config.js"></script>
     <script src="/Scripts/jquery.validate.js" type='text/javascript'></script>
     <script src="/Scripts/jquery.validate.unobtrusive.js" type='text/javascript'></script>
+    <script>
+        var stoklar = null;
+        async function getstokAsync() {
+            var url = "http://192.168.2.13:83/api/stok/giriscikis/";
+            let response = await fetch(url);
+            let data = await response.json()
+            return data;
+        }
+    </script>
 </head>
 <body>
-
+   
     <div class="layout-wrapper layout-content-navbar">
         <div class="layout-container">
             <!-- Menu -->
@@ -285,7 +296,7 @@
                 @RenderBody()
                 <!-- / Content -->
                 <!-- Footer -->
-                <footer class="content-footer footer bg-footer-theme">
+                <footer class="content-footer footer bg-footer-theme mb-0">
                     <div class="container-xxl d-flex flex-wrap justify-content-between py-2 flex-md-row flex-column">
                         <div style="padding-left:40%">
                             ©
@@ -307,13 +318,10 @@
     <!-- Overlay -->
     <div class="layout-overlay layout-menu-toggle"></div>
     <script src="https://unpkg.com/tableexport.jquery.plugin/tableExport.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.10.21/libs/jsPDF/jspdf.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.10.21/libs/jsPDF-AutoTable/jspdf.plugin.autotable.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/bootstrap-table.min.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/bootstrap-table-locale-all.min.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/export/bootstrap-table-export.min.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
-
     <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/mobile/bootstrap-table-mobile.min.js"></script>
 
 
