--- a/NOVA/Views/Shared/_Layout_detayli_Sip.cshtml
+++ b/NOVA/Views/Shared/_Layout_detayli_Sip.cshtml
@@ -108,7 +108,7 @@
                                     </a>
                                 </li>
 
-                                <li class="menu-item active" style="font-weight:normal;display: @ViewBag.DisplayZiyaretPlani">
+                                <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayZiyaretPlani">
                                     <a href="@Url.Action("ZiyaretPlanlari", "Satis")" class="menu-link">
                                         <div data-i18n="Without menu">Müşteri İlişkileri Yönetimi</div>
                                     </a>
